--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body class="body">
     <!--Header section-->
-    <header class="section header">
+    <!-- <header class="section header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="link logo" href="./index.html">Web<span class="studio-dark">Studio</span> </a>
@@ -59,18 +59,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main class="main">
       <!--hero section-->
 
-      <section class="section hero-section">
+      <!-- <section class="section hero-section">
         <div class="div-container">
           <h1 class="solutions">Effective Solutions for Your Business</h1>
           <button type="button" class="button button-order" data-modal-open>Order Service</button>
         </div>
-      </section>
+      </section> -->
       <!--Section2-->
-      <section class="section section-one">
+      <!-- <section class="section section-one">
         <div class="container div-second">
           <h2 class="visually-hidden">none</h2>
           <ul class="list list-strategy">
@@ -124,9 +124,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Section3-->
-      <section class="section section-two">
+      <!-- <section class="section section-two">
         <div class="container">
           <h2 class="what-are-we">What are we doing</h2>
           <ul class="list ul-what-are-we">
@@ -364,7 +364,7 @@
       </section>
     </main>
     <!--footer section-->
-    <footer class="section footer">
+    <!-- <footer class="section footer">
       <div class="container div-footer">
         <div class="footer-class">
           <a class="link logo logo-con" href="./index.html"
@@ -421,7 +421,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div data-modal class="bagdrop is-hidden data-modal">
       <div class="modal">
         <button class="modal-buttom" type="button" data-modal-close>
