--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <button type="button" class="button button-order" data-modal-open>Order Service</button>
         </div>
       </section> -->
-      <!--Section2-->
-      <!-- <section class="section section-one">
+      <!-- Section2 -->
+      <section class="section section-one">
         <div class="container div-second">
           <h2 class="visually-hidden">none</h2>
           <ul class="list list-strategy">
@@ -124,7 +124,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Section3-->
       <!-- <section class="section section-two">
         <div class="container">
@@ -141,7 +141,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Section4-->
       <section class="section section-three">
         <div class="container div-section-three">
