--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
       </section>
       <!--Section3-->
-      <!-- <section class="section section-two">
+      <section class="section section-two">
         <div class="container">
           <h2 class="what-are-we">What are we doing</h2>
           <ul class="list ul-what-are-we">
@@ -141,7 +141,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Section4-->
       <section class="section section-three">
         <div class="container div-section-three">
