--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <main class="main">
       <!--hero section-->
 
-      <!-- <section class="section hero-section">
+      <section class="section hero-section">
         <div class="div-container">
           <h1 class="solutions">Effective Solutions for Your Business</h1>
           <button type="button" class="button button-order" data-modal-open>Order Service</button>
         </div>
-      </section> -->
+      </section> 
       <!-- Section2 -->
       <section class="section section-one">
         <div class="container div-second">
@@ -364,7 +364,7 @@
       </section>
     </main>
     <!--footer section-->
-    <!-- <footer class="section footer">
+    <footer class="section footer">
       <div class="container div-footer">
         <div class="footer-class">
           <a class="link logo logo-con" href="./index.html"
@@ -421,7 +421,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div data-modal class="bagdrop is-hidden data-modal">
       <div class="modal">
         <button class="modal-buttom" type="button" data-modal-close>
