--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
     </header>
 
     <main>
-      <section class="section main-section">
+      <section class="container section main-section">
         <div class="container">
           <h1 class="visually-hidden">devices</h1>
           <ul class="list button-ul">
