--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body class="body">
     <!--Header section-->
-    <!-- <header class="section header">
+    <header class="section header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="link logo" href="./index.html">Web<span class="studio-dark">Studio</span> </a>
@@ -58,8 +58,21 @@
             </li>
           </ul>
         </address>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle-icon"
+            width="32"
+            height="22"
+            
+          >
+           <use href="./images/icons.svg#icon-menu-icon"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header> 
     <main class="main">
       <!--hero section-->
 
@@ -479,6 +492,76 @@
           </form>
       </div>
     </div>
+    <!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="" class="link">Studio</a></li>
+        <li><a href="" class="link">Portfolio</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+      </ul>
+      <ul class="list link-list">
+            <li class="list list-mailo">
+              <a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="list list-tell">
+              <a class="link address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+      <ul class="list ul-designer">
+                  <li class="ul-li-designer">
+                    <a class="a-designer" href="" aria-label="instagram">
+                      <svg class="svg-designer" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ul-li-designer">
+                    <a class="a-designer" href="" aria-label="twitter">
+                      <svg class="svg-designer" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ul-li-designer">
+                    <a class="a-designer" href="" aria-label="facebook">
+                      <svg class="svg-designer" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ul-li-designer">
+                    <a class="a-designer" href="" aria-label="linkedin">
+                      <svg class="svg-designer" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+      
+    </div>
+     <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
