--- a/portfolio.html
+++ b/portfolio.html
@@ -212,7 +212,7 @@
     <footer class="section footer">
       <div class="container div-footer">
       <div class="footer-class">
-        <a class="link logo" href="./index.html">Web<span class="studio-wight">Studio</span>
+        <a class="link logo logo-con" href="./index.html">Web<span class="studio-wight">Studio</span>
           </a>
         <p class="footer-incris">
           Increase the flow of customers and sales for your business with digital
