--- a/index.html
+++ b/index.html
@@ -144,13 +144,19 @@
           <h2 class="what-are-we">What are we doing</h2>
           <ul class="list ul-what-are-we">
             <li class="li-ul">
-              <img src="./images/2section/monitor.jpg" alt="foto1" width="360" />
+              <img
+              srcset="./images/2section/monitor.jpg 1x, ./images/2section/monitor@.jpg 2x"
+               src="./images/2section/monitor.jpg" alt="foto1" width="360" />
             </li>
             <li class="li-ul">
-              <img src="./images/2section/telefon.jpg" alt="foto2" width="360" />
+              <img
+              srcset="./images/2section/telefon.jpg 1x, ./images/2section/telefon@.jpg 2x"
+               src="./images/2section/telefon.jpg" alt="foto2" width="360" />
             </li>
             <li class="li-ul">
-              <img src="./images/2section/planshet.jpg" alt="foto3" width="360" />
+              <img
+              srcset="./images/2section/planshet.jpg 1x, ./images/2section/planshet@.jpg 2x"
+               src="./images/2section/planshet.jpg" alt="foto3" width="360" />
             </li>
           </ul>
         </div>
@@ -163,6 +169,7 @@
             <li class="li-fotopeople">
               <img
                 class="fotopeople"
+                srcset="./images/3section/Mark.img.jpg 1x, ./images/3section/Mark@.jpg 2x"
                 src="./images/3section/Mark.img.jpg"
                 alt="mark-guerrero"
                 width="264"
@@ -205,6 +212,7 @@
             <li class="li-fotopeople">
               <img
                 class="fotopeople"
+                srcset="./images/3section/Tom.img.jpg 1x, ./images/3section/Tom@.jpg 2x"
                 src="./images/3section/Tom.img.jpg"
                 alt="tom-ford"
                 width="264"
@@ -247,6 +255,7 @@
             <li class="li-fotopeople">
               <img
                 class="fotopeople"
+                srcset="./images/3section/Camila.img.jpg 1x, ./images/3section/Camila@.jpg 2x"
                 src="./images/3section/Camila.img.jpg"
                 alt="camila-garcia"
                 width="264"
@@ -289,6 +298,7 @@
             <li class="li-fotopeople">
               <img
                 class="fotopeople"
+                srcset="./images/3section/Daniel.img.jpg 1x, ./images/3section/Daniel@.jpg 2x"
                 src="./images/3section/Daniel.img.jpg"
                 alt="daniel-wilson"
                 width="264"
