--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <!--hero section-->
 
       <section class="section hero-section">
-        <div class="div-container">
+        <div class="div-container container-width">
           <h1 class="solutions">Effective Solutions for Your Business</h1>
           <button type="button" class="button button-order" data-modal-open>Order Service</button>
         </div>
       </section> 
       <!-- Section2 -->
       <section class="section section-one">
-        <div class="container div-second">
+        <div class="container div-second div-text-second">
           <h2 class="visually-hidden">none</h2>
           <ul class="list list-strategy">
             <li class="li-strategy">
@@ -343,7 +343,7 @@
       </section>
       <!--Section5-->
       <section class="section section-four">
-        <div class="container">
+        <div class="container defolt-class">
           <h2 class="customers">Customers</h2>
           <ul class="list ul-customers">
             <li class="li-customers">
@@ -388,7 +388,7 @@
     </main>
     <!--footer section-->
     <footer class="section footer">
-      <div class="container div-footer">
+      <div class="container div-footer defolt-footer">
         <div class="footer-class">
           <a class="link logo logo-con" href="./index.html"
             >Web<span class="studio-wight">Studio</span>
@@ -446,7 +446,7 @@
       </div>
     </footer>
     <div data-modal class="bagdrop is-hidden data-modal">
-      <div class="modal">
+      <div class="modal modal-window-div">
         <button class="modal-buttom" type="button" data-modal-close>
           <svg class="icon-modal" width="8" height="8">
             <use href="./images/icons.svg#x-close"></use>
@@ -504,27 +504,27 @@
     </div>
     <!-- Mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu ">
+      <button class="js-close-menu toggle-black">
         <svg
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="8"
+          height="8"
         >
-         <svg class="modal-form-checkbox-icon-black" width="8" height="8">
-            <use class="modal-form-checkbox-icon-black-icon" href="./images/icons.svg#icon-black"></use>
+         <svg class="modal-form-checkbox-icon-black" width="24" height="24">
+            <use class="modal-form-checkbox-icon-black-icon" href="./images/icons.svg#x-close"></use>
               </svg>
         </svg>
       </button>
 
       <ul class="mobile-menu">
         <li
-        class="mobile-menu-li"><a href="" class="link mobile-menu-modal active">Studio</a></li>
+        class="mobile-menu-li"><a class="link mobile-menu-modal active" href="./index.html">Studio</a></li>
         <li
-        class="mobile-menu-li"><a href="" class="link mobile-menu-modal">Portfolio</a></li>
+        class="mobile-menu-li"><a class="link mobile-menu-modal" href="./portfolio.html">Portfolio</a></li>
         <li
-        class="mobile-menu-li"><a href="" class="link mobile-menu-modal">Contacts</a></li>
+        class="mobile-menu-li"><a class="link mobile-menu-modal" href="">Contacts</a></li>
       </ul>
       <ul class="list link-list-modal">
          <li class="list list-tell-modal">
