--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <address class="list address">
           <ul class="list link-list">
             <li class="list list-mailo">
-              <a class="link address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="link address-link size-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="list list-tell">
-              <a class="link address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="list list-tell ">
+              <a class="link address-link size-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
